--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# директории в игнор
+# РґРёСЂРµРєС‚РѕСЂРёРё РІ РёРіРЅРѕСЂ
 /.vs/
 /AbstractFactory/
 /BAK/
@@ -22,7 +22,7 @@
 */bin/*
 */obj/*
 
-# Файлы в игнор
+# Р¤Р°Р№Р»С‹ РІ РёРіРЅРѕСЂ
 /icon.ico
 /icon.psd
 /Asterion.sln
