--- a/ExtensionStore/ExtensionStore.csproj
+++ b/ExtensionStore/ExtensionStore.csproj
@@ -65,7 +65,7 @@
     <Compile Include="Extrcat\ExtractOnFile.cs" />
     <Compile Include="Extrcat\HtmlString.cs" />
     <Compile Include="Extrcat\ParserManeger.cs" />
-    <Compile Include="Extrcat\SiteParser.cs" />
+    <Compile Include="Extrcat\ExtensionParser.cs" />
     <Compile Include="XmlAdd\XmlConstructor.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
