--- a/SearchWorkWPF/SearchWorkWPF.csproj
+++ b/SearchWorkWPF/SearchWorkWPF.csproj
@@ -34,6 +34,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>searchJob2.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="HtmlAgilityPack">
       <HintPath>..\..\..\ParserHTML\bin\Debug\HtmlAgilityPack.dll</HintPath>
@@ -102,6 +105,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="searchJob.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="searchJob2.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="searchJob3.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
